--- a/Tarefas/WindowsFormsMySql/WindowsFormsMySql.csproj
+++ b/Tarefas/WindowsFormsMySql/WindowsFormsMySql.csproj
@@ -112,6 +112,12 @@
       <DependentUpon>FormInserirFormandos.cs</DependentUpon>
     </Compile>
     <Compile Include="Geral.cs" />
+    <Compile Include="princioal.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="princioal.Designer.cs">
+      <DependentUpon>princioal.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
@@ -119,6 +125,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormInserirFormandos.resx">
       <DependentUpon>FormInserirFormandos.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="princioal.resx">
+      <DependentUpon>princioal.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
